added context menu, count
todo: edit, save/load test, move count to horizontal

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,13 @@
     tools:context="com.example.hiufungk_sizebook.MainActivity">
 
     <TextView
-        android:id="@+id/hello"
+        android:id="@+id/info_count_word"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/info_count_word" />
+
+    <TextView
+        android:id="@+id/info_count"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/info_count" />
